api call update 11

--- a/vercel.json
+++ b/vercel.json
@@ -11,5 +11,10 @@
       "src": "/(.*)",
       "dest": "/"
     }
-  ]
+  ],
+  "env": {
+    "FLASK_ENV": "production",
+    "FLASK_APP": "./index.py",
+    "VERCEL": "true"
+  }
 }
