--- a/vercel.json
+++ b/vercel.json
@@ -9,7 +9,8 @@
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/"
+      "dest": "/",
+      "methods": ["GET","Post"]
     }
   ],
   "env": {
